kubernetes/example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  defaultBackend:
    service:
      name: helloworld
      port:
        number: 80
  rules:
    - host: helloworld.com
      http:
        paths:
        - path: /bar(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: helloworld
              port:
                number: 80
        - path: /foo(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: helloworld-2
              port:
                number: 80
